make posts, tags and all-tags inherit from blog template

--- a/templates/posts.njk
+++ b/templates/posts.njk
@@ -1,15 +1,8 @@
 ---
 title: Blog
 description: Vasundhara Gautam's blog archive
-layout: layouts/layout
+layout: layouts/blog
 ---
-<style>
-@media (min-width: 1200px) {
-    .container{
-        max-width: 900px;
-    }
-}
-</style>
 
 <p>You can also <a href="{{ "/feed.xml" | url }}">subscribe to my feed</a> with your favourite feed reader.<p>
 
