--- a/templates/all-tags.njk
+++ b/templates/all-tags.njk
@@ -1,40 +1,9 @@
 ---
 permalink: /tags/
-layout: layouts/layout
+layout: layouts/blog
 title: All tags
 description: List of all tags used on Vasundhara Gautam's blog
 ---
-<style>
-@media (min-width: 1200px) {
-    .container{
-        max-width: 900px;
-    }
-}
-.post-tag {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  text-transform: uppercase;
-  font-size: 0.75em; /* 12px /16 */
-  padding: 0.08333333333333em 0.3333333333333em; /* 1px 4px /12 */
-  margin-left: 0.6666666666667em; /* 8px /12 */
-  margin-top: 0.5em; /* 6px /12 */
-  margin-bottom: 0.5em; /* 6px /12 */
-  color: var(--darkgray);
-  border: 1px solid var(--gray);
-  border-radius: 0.25em; /* 3px /12 */
-  text-decoration: none;
-  line-height: 1.8;
-}
-a[href].post-tag,
-a[href].post-tag:visited {
-  color: inherit;
-}
-a[href].post-tag:hover,
-a[href].post-tag:focus {
-  background-color: var(--lightgray);
-}
-</style>
 
 <h1>Tags</h1>
 
