--- a/templates/_includes/layouts/post.njk
+++ b/templates/_includes/layouts/post.njk
@@ -1,7 +1,7 @@
 {% extends "layouts/blog.njk" %}
 
 {% block body %}
-    <time class="postlist-date" datetime="{{ date | htmlDateString }}">{{ date | readableDate }}</time>
+    <time class="postlist-date" datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
     {% for tag in tags | filterTagList %}
       {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
       <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
