--- a/static/css/code.css
+++ b/static/css/code.css
@@ -29,7 +29,8 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: #75715e;
+  color: #b5b4a6;
+  font-style: italic;
 }
 .token.punctuation {
   color: #f8f8f2;
