add caption track for name pronunciation

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -57,6 +57,7 @@ layout: layouts/layout
           src="{{ '/static/audio/vasundhara_gautam.wav' }}"
           type="audio/wav"
         />
+        <track src="{{ '/static/vtt/vasundhara_gautam.vtt' }}" kind="captions" srclang="en" label="english_captions">
         <p>
           Your browser doesn't support HTML5 audio. Here is a
           <a href="/static/audio/vasundhara_gautam.wav">link to the audio</a>
