switch to semantic html title from custom tag

--- a/static/css/bootstrap-subset.css
+++ b/static/css/bootstrap-subset.css
@@ -115,7 +115,9 @@ nav {
   padding-left: 0;
   border-radius: 0;
 }
-vgtitle {
+
+title {
+  display: inline;
   font-size: 10vmin;
   vertical-align: middle;
 }
