--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -33,7 +33,7 @@
   </head>
   <body>
     <header class="jumbotron jumbotron-fluid">
-        <vgtitle>{{ title | escape }}</vgtitle>
+        <title>{{ title | escape }}</title>
     </header>
     <nav class="nav navbar">
       <div class="flex-row">
