update bio with phd start

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -12,7 +12,7 @@ layout: layouts/layout
       birder.
     </p>
     <p>
-      I'm about to be a computer science PhD student at Saarland University in
+      I am currently a computer science PhD student at Saarland University in
       Germany. Before this I worked for over 2 years in industry as a Speech
       Recognition Engineer at Dialpad in Canada. I have a BSc in Computing
       Science and Linguistics from Simon Fraser University, where I also worked
