update bio to include title

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -8,11 +8,8 @@ layout: layouts/layout
 <div class="row">
   <div class="col col-md-8 mx-auto">
     <p>
-      Hi! I'm Vasundhara, your friendly neighbourhood computational linguist and
-      birder.
-    </p>
-    <p>
-      I am currently a computer science PhD student at Saarland University in
+      Hi! I'm Vasundhara, a computational linguist and birder. I am currently
+      a computer science PhD student at Saarland University in
       Germany. Before this I worked for over 2 years in industry as a Speech
       Recognition Engineer at Dialpad in Canada. I have a BSc in Computing
       Science and Linguistics from Simon Fraser University, where I also worked
@@ -34,12 +31,12 @@ layout: layouts/layout
       My philosophy on science is that it should do good in the world and
       actively include those outside the ivory tower. Science communication is
       an integral part of the science I want to do, which includes engaging the
-      public with my work and communicating complex ideas accessibly.
+      public with my work and communicating technical ideas accessibly.
     </p>
     <p>
       My pronouns are <a href="https://pronoun.is/xe">xe/xem</a> and
-      <a href="https://pronoun.is/they">they/them</a>. Press the play button to
-      hear my name. If you know the
+      <a href="https://pronoun.is/they">they/them</a>. My title is Mx (pronounced
+      like "mix"). Press the play button to hear my name. If you know the
       <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
         >IPA</a
       >, I pronounce my name like
