replace previous domain with dippedrusk

--- a/templates/feed.njk
+++ b/templates/feed.njk
@@ -5,11 +5,11 @@
   "metadata": {
     "title": "Vasundhara Gautam's blog",
     "subtitle": "Thoughts, feelings and navel-gazing on various subjects (including but not limited to language, computers, queerness, identity and my life), constrained neither by medium nor genre but merely by my technical expertise at website coding",
-    "url": "https://vasundharagautam.com/posts/",
-    "feedUrl": "https://vasundharagautam.com/feed.xml",
+    "url": "https://dippedrusk.com/posts/",
+    "feedUrl": "https://dippedrusk.com/feed.xml",
     "author": {
       "name": "Vasundhara Gautam",
-      "email": "me@vasundharagautam.com"
+      "email": "me@dippedrusk.com"
     }
   }
 }
