--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -21,7 +21,7 @@
     <meta name="twitter:site" content="@VasundharaNLP" />
     <meta name="twitter:title" content="{{ short_title | escape if short_title else title}} | Vasundhara Gautam" />
     <meta name="twitter:description" content="{{ description | escape }}" />
-    <meta name="twitter:image" content="https://vasundharagautam.com/static/img/map.jpg" />
+    <meta name="twitter:image" content="https://dippedrusk.com/static/img/map.jpg" />
     <meta name="twitter:image:alt" content="Close-up of a colourful geographical map of North America." />
     <title>{{ short_title | escape if short_title else title | escape }} | Vasundhara Gautam</title>
     <link href="{{ "/feed.xml" | url }}" type="application/atom+xml" rel="alternate" title="Vasundhara Gautam's blog feed" />
