change first name to initial

--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="https://dippedrusk.com/static/img/map.jpg" />
     <meta name="twitter:image:alt" content="Close-up of a colourful geographical map of North America." />
     <title>{{ short_title | escape if short_title else title | escape }} | Vasundhara Gautam</title>
-    <link href="{{ "/feed.xml" | url }}" type="application/atom+xml" rel="alternate" title="Vasundhara Gautam's blog feed" />
+    <link href="{{ "/feed.xml" | url }}" type="application/atom+xml" rel="alternate" title="Blog feed" />
 {% set css %}
   {% include "static/css/bootstrap-subset.css" %}
 {% endset %}
