--- a/templates/all-tags.njk
+++ b/templates/all-tags.njk
@@ -2,7 +2,7 @@
 permalink: /tags/
 layout: layouts/blog
 title: All tags
-description: List of all tags used on Vasundhara Gautam's blog
+description: List of all tags used on my blog
 ---
 
 <h1>Tags</h1>
