--- a/templates/tags.njk
+++ b/templates/tags.njk
@@ -13,7 +13,7 @@ pagination:
 layout: layouts/blog
 eleventyComputed:
   title: Tagged "{{ tag }}"
-  description: Search results on Vasundhara Gautam's blog for "{{ tag }}"
+  description: Search results for blog posts tagged "{{ tag }}"
 permalink: /tags/{{ tag | slug }}/
 ---
 
