fix newly broken Twitter and LinkedIn links

--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -18,7 +18,7 @@
       href="{{ '/static/favicon.ico' }}"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@VasundharaNLP" />
+    <meta name="twitter:site" content="@DippedRusk" />
     <meta name="twitter:title" content="{{ short_title | escape if short_title else title}} | Vasundhara Gautam" />
     <meta name="twitter:description" content="{{ description | escape }}" />
     <meta name="twitter:image" content="https://dippedrusk.com/static/img/map.jpg" />
@@ -60,8 +60,8 @@
           <a href="mailto:vasundhara131719@gmail.com">Email</a> |
           <a href="https://github.com/vgautam">GitHub</a> |
           <a href="https://orcid.org/0000-0002-7263-8578">ORCID</a> |
-          <a href="https://www.linkedin.com/in/vasundharagautam/">LinkedIn</a> |
-          <a href="https://twitter.com/VasundharaNLP">Twitter</a> |
+          <a href="https://www.linkedin.com/in/dippedrusk/">LinkedIn</a> |
+          <a href="https://twitter.com/DippedRusk">Twitter</a> |
           <a href="{{ "/feed.xml" | url }}">Feed</a>
         </p>
       </div>
