--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -57,7 +57,7 @@
     <footer class="text-center text-lg-start">
       <div class="text-center p-3">
         <p>
-          <a href="mailto:vasundhara131719@gmail.com">Email</a> |
+          <a href="mailto:me@dippedrusk.com">Email</a> |
           <a href="https://github.com/vgautam">GitHub</a> |
           <a href="https://orcid.org/0000-0002-7263-8578">ORCID</a> |
           <a href="https://www.linkedin.com/in/dippedrusk/">LinkedIn</a> |
