replace with vagrant

--- a/templates/feed.njk
+++ b/templates/feed.njk
@@ -3,12 +3,12 @@
   "permalink": "feed.xml",
   "eleventyExcludeFromCollections": true,
   "metadata": {
-    "title": "Vasundhara Gautam's blog",
+    "title": "Vagrant Gautam's blog",
     "subtitle": "Thoughts, feelings and navel-gazing on various subjects (including but not limited to language, computers, queerness, identity and my life), constrained neither by medium nor genre but merely by my technical expertise at website coding",
     "url": "https://dippedrusk.com/posts/",
     "feedUrl": "https://dippedrusk.com/feed.xml",
     "author": {
-      "name": "Vasundhara Gautam",
+      "name": "Vagrant Gautam",
       "email": "me@dippedrusk.com"
     }
   }
