--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -10,20 +10,20 @@
     <meta name="description" content="{{ description | escape }}" />
     <meta
       name="keywords"
-      content="Vasundhara Gautam, Vasundhara, computational linguistics, NLP"
+      content="Vagrant Gautam, Vagrant, Vasundhara Gautam, computational linguistics, NLP"
     />
-    <meta name="author" content="Vasundhara Gautam" />
+    <meta name="author" content="Vagrant Gautam" />
     <link
       rel="shortcut icon"
       href="{{ '/static/favicon.ico' }}"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@DippedRusk" />
-    <meta name="twitter:title" content="{{ short_title | escape if short_title else title}} | Vasundhara Gautam" />
+    <meta name="twitter:title" content="{{ short_title | escape if short_title else title}} | Vagrant Gautam" />
     <meta name="twitter:description" content="{{ description | escape }}" />
     <meta name="twitter:image" content="https://dippedrusk.com/static/img/map.jpg" />
     <meta name="twitter:image:alt" content="Close-up of a colourful geographical map of North America." />
-    <title>{{ short_title | escape if short_title else title | escape }} | Vasundhara Gautam</title>
+    <title>{{ short_title | escape if short_title else title | escape }} | Vagrant Gautam</title>
     <link href="{{ "/feed.xml" | url }}" type="application/atom+xml" rel="alternate" title="Blog feed" />
 {% set css %}
   {% include "static/css/bootstrap-subset.css" %}
