--- a/templates/index.njk
+++ b/templates/index.njk
@@ -1,14 +1,14 @@
 ---
 short_title: Home
-title: Vasundhara Gautam
-description: Homepage of Vasundhara Gautam's website
+title: Vagrant Gautam
+description: Homepage of Vagrant Gautam's website
 layout: layouts/layout
 ---
 
 <div class="row">
   <div class="col col-md-8 mx-auto">
     <p>
-      Hi! I'm Vasundhara, a computational linguist and birder. I am currently
+      Hi! I'm Vagrant, a computational linguist and birder. I am currently
       a computer science PhD student at Saarland University in
       Germany. Before this I worked for over 2 years in industry as a Speech
       Recognition Engineer at Dialpad in Canada. I have a BSc in Computing
@@ -34,6 +34,7 @@ layout: layouts/layout
       public with my work and communicating technical ideas accessibly.
     </p>
     <p>
+      You may have known me under a different name previously but I go by Vagrant now, so please use that.
       My pronouns are <a href="https://pronoun.is/xe">xe/xem</a> and
       <a href="https://pronoun.is/they">they/them</a>. My title is Mx (pronounced
       like "mix"). Press the play button to hear my name. If you know the
