fix pronunciation guides

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -40,25 +40,21 @@ layout: layouts/layout
       like "mix"). Press the play button to hear my name. If you know the
       <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
         >IPA</a
-      >, I pronounce my name like
+      >, my name is pronounced like
       <span class="ipa-pronunciation"
-        >[v&#652;'s&#361;n.d&#810;&#689;&#601;.&#638;a&#720;.'ga&#650;.t&#810;&#652;m]</span
-      >
-      and will accept your best approximation of
-      <span class="ipa-pronunciation"
-        >/v&#652;'s&#650;n.da.ra.'ga&#650;.tam/</span
+        >/'ve&#618;.g&#633;&#600;nt.'ga&#650;.t&#652;m/</span
       >.
     </p>
     <section class="player">
       <audio class="custom-audio-player">
         <source
-          src="{{ '/static/audio/vasundhara_gautam.wav' }}"
+          src="{{ '/static/audio/vagrant_gautam.wav' }}"
           type="audio/wav"
         />
-        <track src="{{ '/static/vtt/vasundhara_gautam.vtt' }}" kind="captions" srclang="en" label="english_captions">
+        <track src="{{ '/static/vtt/vagrant_gautam.vtt' }}" kind="captions" srclang="en" label="english_captions">
         <p>
           Your browser doesn't support HTML5 audio. Here is a
-          <a href="/static/audio/vasundhara_gautam.wav">link to the audio</a>
+          <a href="/static/audio/vagrant_gautam.wav">link to the audio</a>
           instead.
         </p>
       </audio>
