link from homepage to name post

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -28,7 +28,9 @@ layout: layouts/layout
       public with my work and communicating technical ideas accessibly.
     </p>
     <p>
-      You may have known me under a different name previously but I go by Vagrant now, so please use that.
+      You may have known me under a different name previously but I
+      <a href="posts/2022-04-30-name/">go by Vagrant now</a>,
+      so please use that.
       My pronouns are <a href="https://pronoun.is/xe">xe/xem</a> and
       <a href="https://pronoun.is/they">they/them</a>. My title is Mx (pronounced
       like "mix"). Press the play button to hear my name. If you know the
