--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -7,23 +7,25 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="{{ description | escape }}" />
     <meta
       name="keywords"
       content="Vagrant Gautam, Vagrant, Vasundhara Gautam, computational linguistics, NLP"
     />
-    <meta name="author" content="Vagrant Gautam" />
     <link
       rel="shortcut icon"
       href="{{ '/static/favicon.ico' }}"
     />
+
+    <title>{{ short_title | escape if short_title else title | escape }} | Vagrant Gautam</title>
+    <meta name="description" content="{{ description | escape }}" />
+    <meta name="author" content="Vagrant Gautam" />
+
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@DippedRusk" />
-    <meta name="twitter:title" content="{{ short_title | escape if short_title else title}} | Vagrant Gautam" />
-    <meta name="twitter:description" content="{{ description | escape }}" />
-    <meta name="twitter:image" content="https://dippedrusk.com/static/img/map.jpg" />
-    <meta name="twitter:image:alt" content="Close-up of a colourful geographical map of North America." />
-    <title>{{ short_title | escape if short_title else title | escape }} | Vagrant Gautam</title>
+    <meta property="og:title" content="{{ short_title | escape if short_title else title}} | Vagrant Gautam" />
+    <meta property="og:description" content="{{ description | escape }}" />
+    <meta property="og:image" content="https://dippedrusk.com/static/img/map.jpg" />
+    <meta property="og:image:alt" content="Close-up of a colourful geographical map of North America." />
     <link href="{{ "/feed.xml" | url }}" type="application/atom+xml" rel="alternate" title="Blog feed" />
 {% set css %}
   {% include "static/css/bootstrap-subset.css" %}
