--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -59,7 +59,7 @@
     <footer class="text-center text-lg-start">
       <div class="text-center p-3">
         <p>
-          <a href="mailto:me@dippedrusk.com">Email</a> |
+          <a href="mailto:&#109;&#101;&#64;&#100;&#105;&#112;&#112;&#101;&#100;&#114;&#117;&#115;&#107;&#46;&#99;&#111;&#109;?subject=change this if you aren't a bot">Email</a> |
           <a href="https://github.com/dippedrusk">GitHub</a> |
           <a href="https://orcid.org/0000-0002-7263-8578">ORCID</a> |
           <a href="https://www.linkedin.com/in/dippedrusk/">LinkedIn</a> |
