update homepage bio

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -8,35 +8,34 @@ layout: layouts/layout
 <div class="row">
   <div class="col col-md-8 mx-auto">
     <p>
-      Hi! I'm Vagrant, a computational linguist and birder. I am currently
-      a computer science PhD student at Saarland University in
-      Germany. Before this I worked for over 2 years in industry as a Speech
-      Recognition Engineer at Dialpad in Canada. I have a BSc in Computing
-      Science and Linguistics from Simon Fraser University, where I also worked
-      at an experimental phonology lab and a discourse processing lab.
+      Hi! I'm Vagrant, a computer scientist, linguist and birder. I am a computer science PhD student at Saarland University in
+      Germany, where I write code in programming languages to make computers do things with human languages - I currently work on low-resource language modelling and domain adaptation for German and English. Broadly, my research interests include:
     </p>
-    <p>My research interests include:</p>
     <ul>
-      <li>multilingual and multi-user language and speech processing</li>
-      <li>phonetics and phonology</li>
+      <li>multi-user text and speech processing</li>
       <li>low-resource settings</li>
+      <li>gender, language and tech</li>
     </ul>
     <p>
-      My philosophy on science is that it should do good in the world and
-      actively include those outside the ivory tower. Science communication is
-      an integral part of the science I want to do, which includes engaging the
-      public with my work and communicating technical ideas accessibly.
+      Before starting my PhD, I used to work in industry as a Speech
+      Recognition Engineer at Dialpad in Canada. I did a Bachelor's degree in Computing
+      Science and Linguistics at Simon Fraser University, during which I also worked
+      at an experimental phonology lab, a discourse processing lab, General Electric, an industrial kitchen, and more. I'm also autistic and trans, both of which inform what I read, how I work and what I blog about.
+    </p>
+    <p>
+      My philosophy on science is that it should do good in the world, for a definition of good that is power-aware at worst and counter-power at best.
+      (This is difficult under capitalism).
+      Such science can only be done in collaboration with people outside the ivory tower. Science communication is also an integral part of the science I want to do, and I enjoy giving talks, especially introductory ones.
     </p>
     <p>
       You may have known me under a different name previously but I
-      <a href="posts/2022-04-30-name/">go by Vagrant now</a>,
-      so please use that.
+      <a href="posts/2022-04-30-name/">go by Vagrant now</a>.
       My pronouns are <a href="https://pronoun.is/xe">xe/xem</a> and
       <a href="https://pronoun.is/they">they/them</a>. My title is Mx (pronounced
       like "mix"). Press the play button to hear my name. If you know the
       <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
         >IPA</a
-      >, my name is pronounced like
+      >, it is
       <span class="ipa-pronunciation"
         >/'ve&#618;.g&#633;&#600;nt.'ga&#650;.t&#652;m/</span
       >.
