link to best blog tags

--- a/templates/posts.njk
+++ b/templates/posts.njk
@@ -4,7 +4,9 @@ description: My blog archive
 layout: layouts/blog
 ---
 
-<p>You can also <a href="{{ "/feed.xml" | url }}">subscribe to my feed</a> with your favourite feed reader.<p>
+<p align="center">My best posts are probably under the
+<a href="{{ "/tags/autism" | url }}">autism</a> and
+<a href="{{ "/tags/autism" | url }}">gender</a> tags. I also have an <a href="{{ "/feed.xml" | url}}">RSS feed</a>.</p>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
