--- a/static/css/bootstrap-subset.css
+++ b/static/css/bootstrap-subset.css
@@ -30,6 +30,7 @@
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
+  overscroll-behavior-y: none;
 }
 
 .col {
