deprecate broken pronoun island links

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -30,8 +30,8 @@ layout: layouts/layout
     <p>
       You may have known me under a different name previously but I
       <a href="posts/2022-04-30-name/">go by Vagrant now</a>.
-      My pronouns are <a href="https://pronoun.is/xe">xe/xem</a> and
-      <a href="https://pronoun.is/they">they/them</a>. My title is Mx (pronounced
+      My pronouns are <a href="posts/2022-12-03-pronouns/">xe/xem and
+      they/them</a>. My title is Mx (pronounced
       like "mix"). Press the play button to hear my name. If you know the
       <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
         >IPA</a
