consolidate work and publications

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -8,20 +8,14 @@ layout: layouts/layout
 <div class="row">
   <div class="col col-md-8 mx-auto">
     <p>
-      Hi! I'm Vagrant, a computer scientist, linguist and birder. I am a computer science PhD student at Saarland University in
-      Germany, where I write code in programming languages to make computers do things with human languages - I currently work on low-resource language modelling and domain adaptation for German and English. Broadly, my research interests include:
+      Hi! I'm Vagrant, a computer scientist, linguist and birder. I am a computer science PhD candidate at Saarland University in
+      Germany, where I write code in programming languages to make computers do things with human languages - I currently work on low-resource language modelling and question answering for German and English. I am figuring out my research interests as I work on my PhD, but broadly they include:
     </p>
     <ul>
-      <li>multi-user text and speech processing</li>
+      <li>robust NLP</li>
       <li>low-resource settings</li>
       <li>gender, language and tech</li>
     </ul>
-    <p>
-      Before starting my PhD, I used to work in industry as a Speech
-      Recognition Engineer at Dialpad in Canada. I did a Bachelor's degree in Computing
-      Science and Linguistics at Simon Fraser University, during which I also worked
-      at an experimental phonology lab, a discourse processing lab, General Electric, an industrial kitchen, and more. I'm also autistic and trans, both of which inform what I read, how I work and what I blog about.
-    </p>
     <p>
       My philosophy on science is that it should do good in the world, for a definition of good that is power-aware at worst and counter-power at best.
       (This is difficult under capitalism).
