fix gender tag on blog

--- a/templates/posts.njk
+++ b/templates/posts.njk
@@ -6,7 +6,7 @@ layout: layouts/blog
 
 <p align="center">My best posts are probably under the
 <a href="{{ "/tags/autism" | url }}">autism</a> and
-<a href="{{ "/tags/autism" | url }}">gender</a> tags. I also have an <a href="{{ "/feed.xml" | url}}">RSS feed</a>.</p>
+<a href="{{ "/tags/gender" | url }}">gender</a> tags. I also have an <a href="{{ "/feed.xml" | url}}">RSS feed</a>.</p>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
