--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -56,8 +56,8 @@
         <p>
           <a href="mailto:&#109;&#101;&#64;&#100;&#105;&#112;&#112;&#101;&#100;&#114;&#117;&#115;&#107;&#46;&#99;&#111;&#109;?subject=change this if you aren't a bot">Email</a> |
           <a href="https://github.com/dippedrusk">GitHub</a> |
-          <a href="https://orcid.org/0000-0002-7263-8578">ORCID</a> |
-          <a href="https://www.linkedin.com/in/dippedrusk/">LinkedIn</a> |
+          <a href="https://www.semanticscholar.org/author/Vagrant-Gautam/2047602319">Semantic Scholar</a> |
+          <a href="https://scholar.google.com/citations?user=BG7ORjIAAAAJ">Google Scholar</a> |
           <a href="{{ "/feed.xml" | url }}">Feed</a>
         </p>
       </div>
