--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -50,7 +50,7 @@
       {{ content | safe }}
     {% endblock %}
     </main>
-    <hr />
+    <hr width="70%" />
     <footer class="text-center text-lg-start">
       <div class="text-center p-3">
         <p>
