add photo to homepage

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -53,6 +53,14 @@ layout: layouts/layout
     </section>
     <br />
   </div>
+  <div class="col col-md-4 mx-auto">
+    <figure>
+      <img src="{{ '/static/img/vagrant.jpeg' }}"
+           alt="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera. They are wearing all-black clothes, a black leather jacket, and a leather choker with spikes. Their hand holds a mocktail in a wine glass."
+           title="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera. They are wearing all-black clothes, a black leather jacket, and a leather choker with spikes. Their hand holds a mocktail in a wine glass."
+      />
+    </figure>
+  </div>
 </div>
 {% set js %} {% include "static/js/audio_player.js" %} {% endset %}
 <script>{{ js | jsmin | safe }}</script>
