create cohesive narrative for research interests

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -8,25 +8,24 @@ layout: layouts/layout
 <div class="row">
   <div class="col col-md-8 mx-auto">
     <p>
-      Hi! I'm Vagrant, a computer scientist, linguist and birder. I am a computer science PhD candidate at Saarland University in
-      Germany, where I write code in programming languages to make computers do things with human languages - I currently work on low-resource language modelling and question answering for German and English. I am figuring out my research interests as I work on my PhD, but broadly they include:
+      Hi! I'm Vagrant, a computer scientist, linguist and birder. I am currently a computer science PhD candidate at Saarland University in
+      Germany, where I work on natural language processing (NLP), i.e., getting computers to do things with human language.
     </p>
-    <ul>
-      <li>robust NLP</li>
-      <li>low-resource settings</li>
-      <li>gender, language and tech</li>
-    </ul>
+    <p>
+      My research is about measuring and improving the <b>robustness</b> of NLP systems, especially as applied to <b>question answering</b> and <b>fairness</b>.
+      I value interdisciplinarity and methodological pluralism, and I am interested in both the social and technical aspects of NLP. On the technical side, I'm drawn to approaches that are more efficient or informed by linguistics. On the social side, I like thinking about the gaps in how we as NLP practitioners define and operationalize concepts like 'robustness' and 'fairness', as well as the societal implications of these gaps.
+    </p>
     <p>
       My philosophy on science is that it should do good in the world, for a definition of good that is power-aware at worst and counter-power at best.
-      (This is difficult under capitalism).
       Such science can only be done in collaboration with people outside the ivory tower. Science communication is also an integral part of the science I want to do, and I enjoy giving talks, especially introductory ones.
     </p>
     <p>
-      You may have known me under a different name previously but I
-      <a href="posts/2022-04-30-name/">go by Vagrant now</a>.
-      My pronouns are <a href="posts/2022-12-03-pronouns/">xe/xem and
-      they/them</a>. My title is Mx (pronounced
-      like "mix"). Press the play button to hear my name. If you know the
+      You may have known me under a different name previously but
+      <a href="posts/2022-04-30-name/">I go by Vagrant now</a>.
+      Please use <a href="posts/2022-12-03-pronouns/#they%2Fthem">they/them</a> or
+      <a href="posts/2022-12-03-pronouns/#xe%2Fxem">xe/xem</a> pronouns to refer to me and
+      if you must use a title, use Mx (pronounced like "mix").
+      Press the play button to hear my name, or if you know the
       <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
         >IPA</a
       >, it is
