--- a/templates/posts/2024-04-12-minesweeper.njk
+++ b/templates/posts/2024-04-12-minesweeper.njk
@@ -26,7 +26,7 @@ $(document).ready(function(){
 <p>Number of mines:</p>
 <p id="crudeCountdown">0</p>
 
-<div id="game">
+<div id="game" class="container" align="center">
   <div id="scorepanel" draggable="false">
     <div id="countdown">
       <div id="countdown_hundreds"></div>
