add brief minesweeper README

--- a/templates/posts/2024-04-12-minesweeper.njk
+++ b/templates/posts/2024-04-12-minesweeper.njk
@@ -31,6 +31,12 @@ layout: layouts/post
   </table>
 </div>
 
+<br>
+
+<p>Rules: There are mines buried under 10 random tiles in the grid above. To win, you have to uncover every safe tile. Left-click a tile to reveal what's underneath. If it's a mine, you die and have to restart the game by clicking the smiley face on top. Otherwise the title has a number indicating the number of mines that exist in the eight tiles surrounding that tile. Flag a tile as potentially having a mine under it by right-clicking it.</p>
+
+<p>Disclaimer: Nothing good will come from looking at the source. The code is bad because I wrote it 6-7 years ago. All I've done now is to put it on my website and get rid of the jQuery bloat which was cool back then.</p>
+
 <script>
     loadNewGame();
 </script>
