--- a/templates/posts/2024-04-12-minesweeper.njk
+++ b/templates/posts/2024-04-12-minesweeper.njk
@@ -9,6 +9,105 @@ layout: layouts/post
 {% set js %} {% include "static/js/minesweeper.js" %} {% endset %}
 <script>{{ js | jsmin | safe }}</script>
 
+<div id="scorepanel" draggable="false">
+  <div id="smiley" class="square unrevealed"></div>
+</div>
+<div class="grid board" oncontextmenu="return false;" id="minesweeper">
+  <button class="board square unrevealed" id="sq-0"></button>
+  <button class="board square unrevealed" id="sq-1"></button>
+  <button class="board square unrevealed" id="sq-2"></button>
+  <button class="board square unrevealed" id="sq-3"></button>
+  <button class="board square unrevealed" id="sq-4"></button>
+  <button class="board square unrevealed" id="sq-5"></button>
+  <button class="board square unrevealed" id="sq-6"></button>
+  <button class="board square unrevealed" id="sq-7"></button>
+  <button class="board square unrevealed" id="sq-8"></button>
+
+  <button class="board square unrevealed" id="sq-9"></button>
+  <button class="board square unrevealed" id="sq-10"></button>
+  <button class="board square unrevealed" id="sq-11"></button>
+  <button class="board square unrevealed" id="sq-12"></button>
+  <button class="board square unrevealed" id="sq-13"></button>
+  <button class="board square unrevealed" id="sq-14"></button>
+  <button class="board square unrevealed" id="sq-15"></button>
+  <button class="board square unrevealed" id="sq-16"></button>
+  <button class="board square unrevealed" id="sq-17"></button>
+
+  <button class="board square unrevealed" id="sq-18"></button>
+  <button class="board square unrevealed" id="sq-19"></button>
+  <button class="board square unrevealed" id="sq-20"></button>
+  <button class="board square unrevealed" id="sq-21"></button>
+  <button class="board square unrevealed" id="sq-22"></button>
+  <button class="board square unrevealed" id="sq-23"></button>
+  <button class="board square unrevealed" id="sq-24"></button>
+  <button class="board square unrevealed" id="sq-25"></button>
+  <button class="board square unrevealed" id="sq-26"></button>
+
+  <button class="board square unrevealed" id="sq-27"></button>
+  <button class="board square unrevealed" id="sq-28"></button>
+  <button class="board square unrevealed" id="sq-29"></button>
+  <button class="board square unrevealed" id="sq-30"></button>
+  <button class="board square unrevealed" id="sq-31"></button>
+  <button class="board square unrevealed" id="sq-32"></button>
+  <button class="board square unrevealed" id="sq-33"></button>
+  <button class="board square unrevealed" id="sq-34"></button>
+  <button class="board square unrevealed" id="sq-35"></button>
+
+  <button class="board square unrevealed" id="sq-36"></button>
+  <button class="board square unrevealed" id="sq-37"></button>
+  <button class="board square unrevealed" id="sq-38"></button>
+  <button class="board square unrevealed" id="sq-39"></button>
+  <button class="board square unrevealed" id="sq-40"></button>
+  <button class="board square unrevealed" id="sq-41"></button>
+  <button class="board square unrevealed" id="sq-42"></button>
+  <button class="board square unrevealed" id="sq-43"></button>
+  <button class="board square unrevealed" id="sq-44"></button>
+
+  <button class="board square unrevealed" id="sq-45"></button>
+  <button class="board square unrevealed" id="sq-46"></button>
+  <button class="board square unrevealed" id="sq-47"></button>
+  <button class="board square unrevealed" id="sq-48"></button>
+  <button class="board square unrevealed" id="sq-49"></button>
+  <button class="board square unrevealed" id="sq-50"></button>
+  <button class="board square unrevealed" id="sq-51"></button>
+  <button class="board square unrevealed" id="sq-52"></button>
+  <button class="board square unrevealed" id="sq-53"></button>
+
+  <button class="board square unrevealed" id="sq-54"></button>
+  <button class="board square unrevealed" id="sq-55"></button>
+  <button class="board square unrevealed" id="sq-56"></button>
+  <button class="board square unrevealed" id="sq-57"></button>
+  <button class="board square unrevealed" id="sq-58"></button>
+  <button class="board square unrevealed" id="sq-59"></button>
+  <button class="board square unrevealed" id="sq-60"></button>
+  <button class="board square unrevealed" id="sq-61"></button>
+  <button class="board square unrevealed" id="sq-62"></button>
+
+  <button class="board square unrevealed" id="sq-63"></button>
+  <button class="board square unrevealed" id="sq-64"></button>
+  <button class="board square unrevealed" id="sq-65"></button>
+  <button class="board square unrevealed" id="sq-66"></button>
+  <button class="board square unrevealed" id="sq-67"></button>
+  <button class="board square unrevealed" id="sq-68"></button>
+  <button class="board square unrevealed" id="sq-69"></button>
+  <button class="board square unrevealed" id="sq-70"></button>
+  <button class="board square unrevealed" id="sq-71"></button>
+
+  <button class="board square unrevealed" id="sq-72"></button>
+  <button class="board square unrevealed" id="sq-73"></button>
+  <button class="board square unrevealed" id="sq-74"></button>
+  <button class="board square unrevealed" id="sq-75"></button>
+  <button class="board square unrevealed" id="sq-76"></button>
+  <button class="board square unrevealed" id="sq-77"></button>
+  <button class="board square unrevealed" id="sq-78"></button>
+  <button class="board square unrevealed" id="sq-79"></button>
+  <button class="board square unrevealed" id="sq-80"></button>
+</div>
+
+<br>
+
+
+<!--
 <div id="game" class="container" align="center" oncontextmenu="return false;">
   <div id="scorepanel" draggable="false">
     <div id="smiley" class="square unrevealed"></div>
@@ -25,6 +124,7 @@ layout: layouts/post
   <tr> <td class="board square unrevealed mine" id="sq-72"/><td class="board square unrevealed two" id="sq-73"/><td class="board square unrevealed" id="sq-74"/><td class="board square unrevealed one" id="sq-75"/><td class="board square unrevealed mine" id="sq-76"/><td class="board square unrevealed one" id="sq-77"/><td class="board square unrevealed one" id="sq-78"/><td class="board square unrevealed one" id="sq-79"/><td class="board square unrevealed one" id="sq-80"/></tr>
   </table>
 </div>
+-->
 
 <br>
 
