add talks to website

--- a/static/css/bootstrap-subset.css
+++ b/static/css/bootstrap-subset.css
@@ -286,3 +286,24 @@ ul {
 .centred {
   text-align: center;
 }
+
+table {
+  border-spacing: 0px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  max-width: 95%;
+}
+
+td {
+  border-bottom: 1px dashed black;
+  padding-right: 1%;
+  padding-left: 1%;
+}
+
+th {
+  text-align: center !important;
+  border-bottom: 1px solid black;
+  padding: 1%;
+}
