--- a/templates/index.njk
+++ b/templates/index.njk
@@ -12,12 +12,12 @@ layout: layouts/layout
       Germany, where I work on natural language processing (NLP), i.e., getting computers to do things with human language.
     </p>
     <p>
-      My research is about measuring and improving the <b>robustness</b> of NLP systems, especially as applied to <b>question answering</b> and <b>fairness</b>.
+      My <a href="work/">research</a> is about measuring and improving the <b>robustness</b> of NLP systems, especially as applied to <b>question answering</b> and <b>fairness</b>.
       I value interdisciplinarity and methodological pluralism, and I am interested in both the social and technical aspects of NLP. On the technical side, I'm drawn to approaches that are more efficient or informed by linguistics. On the social side, I like thinking about the gaps in how we as NLP practitioners define and operationalize concepts like 'robustness' and 'fairness', as well as the societal implications of these gaps.
     </p>
     <p>
       My philosophy on science is that it should do good in the world, for a definition of good that is power-aware at worst and counter-power at best.
-      Such science can only be done in collaboration with people outside the ivory tower. Science communication is also an integral part of the science I want to do, and I enjoy giving talks, especially introductory ones.
+      Such science can only be done in collaboration with people outside the ivory tower. Science communication is also an integral part of the science I want to do, and I enjoy giving <a href="talks/">talks</a>, especially introductory ones.
     </p>
     <p>
       You may have known me under a different name previously but
