--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -40,8 +40,9 @@
     <nav class="nav navbar">
       <div class="flex-row">
             <a class="nav-link" href="/"><span>{{ "&#9758;" | safe if page.url == '/' }}Home</span></a>
-            <a class="nav-link" href="/work"><span>{{ "&#9758;" | safe if '/work' in page.url }}Work</span></a>
-            <a class="nav-link" href="/posts"><span>{{ "&#9758;" | safe if '/posts' in page.url }}Blog</span></a>
+            <a class="nav-link" href="/work"><span>{{ "&#9758;" | safe if '/work/' in page.url }}Work</span></a>
+            <a class="nav-link" href="/talks"><span>{{ "&#9758;" | safe if '/talks/' in page.url }}Talks</span></a>
+            <a class="nav-link" href="/posts"><span>{{ "&#9758;" | safe if '/posts/' in page.url }}Blog</span></a>
       </div>
     </nav>
     <main role="main" class="container">
