--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -24,6 +24,7 @@
 }
 .postlist-date {
   word-spacing: -0.5px;
+  margin-right: 0.6666666666667em; /* 8px /12 */
 }
 .postlist-link {
   padding-left: 0.3em;
@@ -50,7 +51,7 @@
   text-transform: uppercase;
   font-size: 0.75em; /* 12px /16 */
   padding: 0.08333333333333em 0.3333333333333em; /* 1px 4px /12 */
-  margin-left: 0.6666666666667em; /* 8px /12 */
+  margin-right: 0.6666666666667em; /* 8px /12 */
   margin-top: 0.5em; /* 6px /12 */
   margin-bottom: 0.5em; /* 6px /12 */
   color: var(--darkgray);
