--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -34,7 +34,7 @@
 {% block additionalcss %}{% endblock %}
   </head>
   <body>
-    <header class="jumbotron jumbotron-fluid">
+    <header>
         <title>{{ title | escape }}</title>
     </header>
     <nav class="nav navbar">
