--- a/static/css/bootstrap-subset.css
+++ b/static/css/bootstrap-subset.css
@@ -9,7 +9,6 @@
 html {
   min-height: 0vw;
   font-size: 1rem;
-
   line-height: 1.5;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
@@ -33,13 +32,6 @@ body {
 footer {
   /* footers should have vertical padding */
   padding: 1rem;
-}
-
-header,
-footer,
-.navbar {
-  /* all of these elements should have center aligned text */
-  /* we use .navbar and not nav because nav is also used for indexes */
   text-align: center;
 }
 
@@ -60,43 +52,22 @@ hr {
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.navbar {
-  padding-top: 1rem;
-}
+
 nav {
   position: relative;
-  align-items: center;
   justify-content: flex-start;
   margin: 0;
 }
+
 .nav-link {
-  padding: 0.5rem 0.5rem;
-  font-size: 20px;
-  overflow-wrap: normal;
-}
-.nav-link span {
-  display: inline-block;
+  padding: 0rem;
 }
 
-header {
-  /* white text on black / image, with a variable height, full width and padding for aesthetics */
-  padding: 3rem 3rem;
-  background: black;
-  height: auto;
-  width: 100%;
-  /* map from SFU geography as the background */
-  background-image: url("/static/img/map.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-title {
-  color: white;
-  text-shadow: 5px 5px #000000;
-  font-style: bold;
-  display: inline;
-  font-size: 10vmin;
-  vertical-align: middle;
+.top-level-header {
+  padding: 1rem 2rem 0rem 2rem;
+  color: black;
+  display: block;
+  font-size: 29px;
 }
 
 .ipa-pronunciation {
