--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -34,17 +34,17 @@
 {% block additionalcss %}{% endblock %}
   </head>
   <body>
-    <header>
-        <title>{{ title | escape }}</title>
-    </header>
-    <nav class="nav navbar">
-      <div class="flex-row">
-            <a class="nav-link" href="/">{{ "&#9758;" | safe if page.url == '/' }}Home</a>
+    <header class="top-level-header">
+        <nav class="flex-row">
+            <a class="nav-link" href="/">{{ "&#9758;" | safe if page.url == '/' }}Vagrant Gautam</a>
+            •
             <a class="nav-link" href="/work">{{ "&#9758;" | safe if '/work/' in page.url }}Work</a>
+            •
             <a class="nav-link" href="/talks">{{ "&#9758;" | safe if '/talks/' in page.url }}Talks</a>
+            •
             <a class="nav-link" href="/posts">{{ "&#9758;" | safe if '/posts/' in page.url }}Blog</a>
-      </div>
-    </nav>
+        </nav>
+    </header>
     <main role="main" class="container">
     <hr width="78%"/>
     {% block body %}
