--- a/templates/index.njk
+++ b/templates/index.njk
@@ -1,14 +1,18 @@
 ---
 short_title: Home
-title: Vagrant Gautam
+title: Hi, I'm Vagrant!
 description: Homepage of Vagrant Gautam's website
 layout: layouts/layout
 ---
 
+<header>
+    <h1>{{ title | escape }}</h1>
+</header>
+
 <div class="row">
   <div class="col col-md-8 mx-auto">
     <p>
-      Hi! I'm Vagrant, a computer scientist, linguist and birder. I am currently a computer science PhD candidate at Saarland University in
+      I'm a computer scientist, linguist and birder. I am currently a computer science PhD candidate at Saarland University in
       Germany, where I work on natural language processing (NLP), i.e., getting computers to do things with human language.
     </p>
     <p>
