--- a/templates/posts.njk
+++ b/templates/posts.njk
@@ -4,9 +4,13 @@ description: My blog archive
 layout: layouts/blog
 ---
 
-<p align="center">My best posts are probably under the
+<header>
+    <h1>{{ title | escape }}</h1>
+</header>
+
+My best posts are probably under the
 <a href="{{ "/tags/autism" | url }}">autism</a> and
-<a href="{{ "/tags/gender" | url }}">gender</a> tags. I also have an <a href="{{ "/feed.xml" | url}}">RSS feed</a>.</p>
+<a href="{{ "/tags/gender" | url }}">gender</a> tags. I also have an <a href="{{ "/feed.xml" | url}}">RSS feed</a>.
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
